# component_mapper

./: Makefile  README.md  litellm_config.json  pyproject.toml
.cache/: demo_mapping_cache.json  getaipage_cache.json
.cache/registry_http/: ext_bundui_pagination.json  ext_hextaui_pagination.json  shadcn_accordion.json  shadcn_alert-dialog.json  shadcn_alert.json  shadcn_aspect-ratio.json  shadcn_avatar.json  shadcn_badge.json  shadcn_breadcrumb.json  shadcn_button.json  shadcn_calendar.json  shadcn_card.json  shadcn_carousel.json  shadcn_checkbox.json  shadcn_collapsible.json  shadcn_command.json  shadcn_context-menu.json  shadcn_data-table.json  shadcn_date-picker.json  shadcn_dialog.json  shadcn_drawer.json  shadcn_dropdown-menu.json  shadcn_form.json  shadcn_hover-card.json  shadcn_input-otp.json  shadcn_input.json  shadcn_label.json  shadcn_menubar.json  shadcn_navigation-menu.json  shadcn_pagination.json  shadcn_popover.json  shadcn_progress.json  shadcn_radio-group.json  shadcn_resizable.json  shadcn_scroll-area.json  shadcn_select.json  shadcn_separator.json  shadcn_sheet.json  shadcn_sidebar.json  shadcn_skeleton.json  (+10 more)
.github/workflows/: publish_registry_cache.yml
component_mapper/: __init__.py  config.py  models.py  pipeline.py
component_mapper/cache/: mapping_cache.py
component_mapper/mcp/: official_client.py  registry_fetcher.py
examples/: 01_page_segmentation.py  02_mapping_pipeline.py  03_custom_components.py  04_astro_generation.py  05_cache_and_persistence.py  06_full_pipeline.py
scripts/: build_registry_cache.py
(+9092 files in other folders)
