[project]
name = "component-mapper"
version = "0.1.0"
description = "Maps ClassifiedSegment objects to Shadcn UI components and Astro wrappers"
requires-python = ">=3.12"
dependencies = [
    "segment-classifier>=0.1.1",
    "page-segmenter>=0.1.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "beautifulsoup4>=4.12",
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "litellm>=1.40",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "numpy>=1.26",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["component_mapper"]

